--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,10 +3,13 @@
     width: 100%;
 }
 
-div {
+#graph {
     position: relative;
     width: 1000px;
     padding-bottom: 2.5em;
+}
+div.card {
+    width: 1050px;
 }
 p {
     position: absolute;
